--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="container">
         <h1>Hailuo AI - Create Stunning Videos with AI</h1>
         <p>Unleash the power of Hailuo AI, the leading AI video generator. Effortlessly create captivating videos that engage your audience and elevate your content.</p>
-        <a href="http://hailuoai.net/">Get Started Now</a>
+        <a href="https://hailuoai.net/">Get Started Now</a>
 
         <h2>Why Choose Hailuo AI?</h2>
         <ul>
@@ -111,7 +111,7 @@
             </div>
         </div>
 
-        <a href="http://hailuoai.net/">Start Creating Today</a>
+        <a href="https://hailuoai.net/pt">Start Creating Today</a>
     </div>
 </body>
 </html>
