--- a/index.html
+++ b/index.html
@@ -79,6 +79,21 @@
             border-radius: 5px;
             background-color: #fff;
         }
+        
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            margin-top: auto;
+        }
+        footer a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -113,5 +128,8 @@
 
         <a href="https://hailuoai.net/pt">Start Creating Today</a>
     </div>
+    <footer>
+        <p>&copy; 2024 Hailuo AI. All rights reserved. | <a href="https://www.twitch.tv/maverickhhhh" target="_blank">Follow us on Twitch</a></p>
+    </footer>
 </body>
 </html>
