--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <a href="https://hailuoai.net/pt">Start Creating Today</a>
     </div>
     <footer>
-        <p>&copy; 2024 Hailuo AI. All rights reserved. | <a href="https://m.twitch.tv/maverickhhhh" target="_blank">Follow us on Twitch</a></p>
+        <p>&copy; 2024 Hailuo AI. All rights reserved. | <a href="https://m.twitch.tv/maverickhhhh/home" target="_blank">Follow us on Twitch</a></p>
     </footer>
 </body>
 </html>
